TM-12822 Fix Improve the icons and spacing within the Asset Edit CRUD screens

--- a/web-app/tds/web-app/css/shared/components/tds-supports-depends.sass
+++ b/web-app/tds/web-app/css/shared/components/tds-supports-depends.sass
@@ -6,3 +6,7 @@
     width: 100px
   .k-grid-header.k-grid-dynamic-header
     position: relative
+  .icon-action
+    margin-left: -5px
+    font-size: 8px
+
